@@ -20,26 +20,13 @@ package gov.nasa.jpf.jvm;
 
 import gov.nasa.jpf.Config;
 import gov.nasa.jpf.JPF;
+import gov.nasa.jpf.JPFConfigException;
 import gov.nasa.jpf.JPFException;
-import gov.nasa.jpf.jvm.choice.DoubleChoiceFromList;
-import gov.nasa.jpf.jvm.choice.FloatChoiceFromList;
+import gov.nasa.jpf.jvm.choice.DoubleChoiceFromSet;
 import gov.nasa.jpf.jvm.choice.IntChoiceFromSet;
 import gov.nasa.jpf.jvm.choice.IntIntervalGenerator;
-import gov.nasa.jpf.jvm.choice.LongChoiceFromList;
-import gov.nasa.jpf.util.JPFLogger;
-import gov.nasa.jpf.util.ObjectConverter;
-import gov.nasa.jpf.util.ObjectList;
 import gov.nasa.jpf.util.RunListener;
 import gov.nasa.jpf.util.RunRegistry;
-import gov.nasa.jpf.util.json.CGCall;
-import gov.nasa.jpf.util.json.JSONLexer;
-import gov.nasa.jpf.util.json.JSONObject;
-import gov.nasa.jpf.util.json.JSONParser;
-
-import java.io.FileInputStream;
-import java.io.ObjectInputStream;
-import java.util.BitSet;
-import java.util.List;
 
 /**
  * native peer class for programmatic JPF interface (that can be used inside
@@ -50,10 +37,8 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
 
   static boolean isInitialized;
   static int[] counter;
-
   static boolean supportIgnorePath;
   static boolean breakSingleChoice;
-  static boolean enableAtomic;
 
   static Config config;  // we need to keep this around for CG creation
 
@@ -62,15 +47,12 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
   // this is our cache for ChoiceGenerator ctor parameters
   static Object[] cgArgs = { null, null };
 
-  static BitSet[] bitSets;
-  static int nextBitSet;
 
   public static void init (Config conf) {
 
     if (!isInitialized){
       supportIgnorePath = conf.getBoolean("vm.verify.ignore_path");
       breakSingleChoice = conf.getBoolean("cg.break_single_choice");
-      enableAtomic = conf.getBoolean("cg.enable_atomic", true);
 
       counter = null;
       config = conf;
@@ -85,7 +67,7 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
     }
   }
 
-  public static int getCounter__I__I (MJIEnv env, int clsObjRef, int counterId) {
+  public static final int getCounter__I__I (MJIEnv env, int clsObjRef, int counterId) {
     if ((counter == null) || (counterId < 0) || (counterId >= counter.length)) {
       return 0;
     }
@@ -93,71 +75,37 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
     return counter[counterId];
   }
 
-  private static void ensureCounterCapacity (int counterId){
-    if (counter == null) {
-      counter = new int[(counterId >= MAX_COUNTERS) ? counterId+1 : MAX_COUNTERS];
-    } else if (counterId >= counter.length) {
-      int[] newCounter = new int[counterId+1];
-      System.arraycopy(counter, 0, newCounter, 0, counter.length);
-      counter = newCounter;
-    }    
-  }
-  
-  public static void resetCounter__I__V (MJIEnv env, int clsObjRef, int counterId) {
+  public static final void resetCounter__I__V (MJIEnv env, int clsObjRef, int counterId) {
     if ((counter == null) || (counterId < 0) || (counterId >= counter.length)) {
       return;
     }
     counter[counterId] = 0;
   }
 
-  public static void setCounter__II__V (MJIEnv env, int clsObjRef, int counterId, int val) {
-    if (counterId < 0){
-      return;
-    }
-    
-    ensureCounterCapacity(counterId);
-    counter[counterId] = val;
-  }
-  
-  public static int incrementCounter__I__I (MJIEnv env, int clsObjRef, int counterId) {
+  public static final int incrementCounter__I__I (MJIEnv env, int clsObjRef, int counterId) {
     if (counterId < 0) {
       return 0;
     }
 
-    ensureCounterCapacity(counterId);
+    if (counter == null) {
+      counter = new int[(counterId >= MAX_COUNTERS) ? counterId+1 : MAX_COUNTERS];
+    } else if (counterId >= counter.length) {
+      int[] newCounter = new int[counterId+1];
+      System.arraycopy(counter, 0, newCounter, 0, counter.length);
+      counter = newCounter;
+    }
+
     return ++counter[counterId];
   }
 
-  private static void checkBitSetId(int id) {
-    if (bitSets == null) {
-      bitSets = new BitSet[id + 1];
-    } else if (id >= bitSets.length) {
-      BitSet[] newBitSets = new BitSet[id + 1];
-      System.arraycopy(bitSets, 0, newBitSets, 0, bitSets.length);
-      bitSets = newBitSets;
-    }
-
-    if (bitSets[id] == null) {
-      bitSets[id] = new BitSet();
-    }
-  }
-
-  public static void setBitInBitSet__IIZ__V(MJIEnv env, int clsObjRef, int id, int bitNum, boolean value) {
-    checkBitSetId(id);
-    bitSets[id].set(bitNum, value);
-  }
-
-  public static boolean getBitInBitSet__II__Z(MJIEnv env, int clsObjRef, int id, int bitNum) {
-    checkBitSetId(id);
-    return bitSets[id].get(bitNum);
-  }
-
-  public static long currentTimeMillis____J (MJIEnv env, int clsObjRef) {
+  public static final long currentTimeMillis____J (MJIEnv env, int clsObjRef) {
     return System.currentTimeMillis();
   }
 
   public static String getType (int objRef, MJIEnv env) {
-    return Types.getTypeName(env.getElementInfo(objRef).getType());
+    DynamicArea da = env.getDynamicArea();
+
+    return Types.getTypeName(da.get(objRef).getType());
   }
 
   public static void addComment__Ljava_lang_String_2__V (MJIEnv env, int clsObjRef, int stringRef) {
@@ -175,35 +123,10 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
 
   // those are evil - use with extreme care
   public static void beginAtomic____V (MJIEnv env, int clsObjRef) {
-    if (enableAtomic){
-      ThreadInfo tiAtomic = env.getThreadInfo();
-      if (!tiAtomic.isFirstStepInsn()){
-        SystemState ss = env.getSystemState();
-        ChoiceGenerator<?> cg = ss.getSchedulerFactory().createBeginAtomicCG(tiAtomic);
-        if (ss.setNextChoiceGenerator(cg)) {
-          env.repeatInvocation();
-          return;
-        }
-      }
-
-      env.getSystemState().incAtomic();
-    }
+    env.getSystemState().incAtomic();
   }
-  
   public static void endAtomic____V (MJIEnv env, int clsObjRef) {
-    if (enableAtomic){
-      ThreadInfo tiAtomic = env.getThreadInfo();
-
-      if (!tiAtomic.isFirstStepInsn()){
-        env.getSystemState().decAtomic();
-
-        SystemState ss = env.getSystemState();
-        ChoiceGenerator<?> cg = ss.getSchedulerFactory().createEndAtomicCG(tiAtomic);
-        if (ss.setNextChoiceGenerator(cg)) {
-          env.repeatInvocation();
-        }
-      }
-    }
+    env.getSystemState().decAtomic();
   }
 
   public static void busyWait__J__V (MJIEnv env, int clsObjRef, long duration) {
@@ -230,14 +153,16 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
                                            int clsNameRef) {
     String refClassName = env.getStringObject(clsNameRef);
     ThreadInfo ti = env.getThreadInfo();
+    int        stackDepth = ti.countStackFrames();
 
-    StackFrame caller = ti.getLastInvokedStackFrame();
-    if (caller != null){
-      ClassInfo ci = caller.getClassInfo();
-      return ci.isInstanceOf(refClassName);
+    if (stackDepth < 2) {
+      return false;      // native methods don't have a stackframe
     }
 
-    return false;
+    String mthClassName = ti.getCallStackClass(1);
+    ClassInfo ci = ClassInfo.getResolvedClassInfo(mthClassName);
+
+    return ci.isInstanceOf(refClassName);
   }
 
 
@@ -266,9 +191,8 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
       return cg.getNextChoice();
 
     } else {
-      if (ss.setNextChoiceGenerator(cg)){
-        env.repeatInvocation();
-      }
+      ss.setNextChoiceGenerator(cg);
+      env.repeatInvocation();
     }
 
     return dummyVal;
@@ -281,34 +205,32 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
     return ((ChoiceGenerator<T>)cg).getNextChoice();
   }
 
-  public static boolean getBoolean____Z (MJIEnv env, int clsObjRef) {
+  public static final boolean getBoolean____Z (MJIEnv env, int clsObjRef) {
     ThreadInfo ti = env.getThreadInfo();
     SystemState ss = env.getSystemState();
     ChoiceGenerator<?> cg;
 
     if (!ti.isFirstStepInsn()) { // first time around
       cg = new BooleanChoiceGenerator(config, "verifyGetBoolean");
-      if (ss.setNextChoiceGenerator(cg)){
-        env.repeatInvocation();
-      }
-      return true;  // not used if we repeat
+      ss.setNextChoiceGenerator(cg);
+      env.repeatInvocation();
+      return true;  // not used anyways
 
     } else {  // this is what really returns results
       return getNextChoice(ss,"verifyGetBoolean", BooleanChoiceGenerator.class,Boolean.class);
     }
   }
 
-  public static boolean getBoolean__Z__Z (MJIEnv env, int clsObjRef, boolean falseFirst) {
+  public static final boolean getBoolean__Z__Z (MJIEnv env, int clsObjRef, boolean falseFirst) {
     ThreadInfo ti = env.getThreadInfo();
     SystemState ss = env.getSystemState();
     ChoiceGenerator<?> cg;
 
     if (!ti.isFirstStepInsn()) { // first time around
       cg = new BooleanChoiceGenerator( "verifyGetBoolean(Z)", falseFirst );
-      if (ss.setNextChoiceGenerator(cg)){
-        env.repeatInvocation();
-      }
-      return true;  // not used if we repeat
+      ss.setNextChoiceGenerator(cg);
+      env.repeatInvocation();
+      return true;  // not used anyways
 
     } else {  // this is what really returns results
       return getNextChoice(ss,"verifyGetBoolean(Z)", BooleanChoiceGenerator.class, Boolean.class);
@@ -337,22 +259,19 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
     }
   }
 
-  static int getIntFromList (MJIEnv env, int[] values){
+  public static int getIntFromSet___3I__I (MJIEnv env, int clsObjRef, int valArrayRef){
     ThreadInfo ti = env.getThreadInfo();
     SystemState ss = env.getSystemState();
 
     if (!ti.isFirstStepInsn()) { // first time around
-      ChoiceGenerator<Integer> cg = new IntChoiceFromSet( "verifyGetIntSet([I)", values);
+      int[] values = env.getIntArrayObject(valArrayRef);
+
+      IntChoiceGenerator cg = new IntChoiceFromSet( "verifyGetIntSet([I)", values);
       return registerChoiceGenerator(env,ss,ti,cg,0);
 
     } else {
       return getNextChoice(ss, "verifyGetIntSet([I)", IntChoiceGenerator.class, Integer.class);
-    }    
-  }
-  
-  public static int getIntFromList___3I__I (MJIEnv env, int clsObjRef, int valArrayRef){
-    int[] values = env.getIntArrayObject(valArrayRef);
-    return getIntFromList( env, values);
+    }
   }
 
 
@@ -372,24 +291,6 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
     }
   }
 
-  static long getLongFromList (MJIEnv env, long[] values){
-    ThreadInfo ti = env.getThreadInfo();
-    SystemState ss = env.getSystemState();
-
-    if (!ti.isFirstStepInsn()) { // first time around
-      ChoiceGenerator<Long> cg = new LongChoiceFromList( "verifyLongList([J)", values);
-      return registerChoiceGenerator(env,ss,ti,cg,0L);
-
-    } else {
-      return getNextChoice(ss, "verifyLongList([J)", LongChoiceGenerator.class, Long.class);
-    }    
-  }
-  
-  public static long getLongFromList___3J__J (MJIEnv env, int clsObjRef, int valArrayRef){
-    long[] values = env.getLongArrayObject(valArrayRef);
-    return getLongFromList( env, values);    
-  }
-  
   public static int getObject__Ljava_lang_String_2__Ljava_lang_Object_2 (MJIEnv env, int clsObjRef, int idRef) {
     ThreadInfo ti = env.getThreadInfo();
     SystemState ss = env.getSystemState();
@@ -420,42 +321,20 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
     }
   }
 
-  public static double getDoubleFromList (MJIEnv env, double[] values){
+  public static double getDoubleFromSet___3D__D (MJIEnv env, int clsObjRef, int valArrayRef){
     ThreadInfo ti = env.getThreadInfo();
     SystemState ss = env.getSystemState();
 
     if (!ti.isFirstStepInsn()) { // first time around
-      ChoiceGenerator<Double> cg = new DoubleChoiceFromList("verifyDoubleList([D)", values);
+      double[] values = env.getDoubleArrayObject(valArrayRef);
+      DoubleChoiceGenerator cg = new DoubleChoiceFromSet("verifyDoubleSet([D)", values);
       return registerChoiceGenerator(env,ss,ti,cg, 0.0);
 
     } else {
-      return getNextChoice(ss, "verifyDoubleList([D)", DoubleChoiceFromList.class,Double.class);
-    }    
-  }
-  
-  public static double getDoubleFromList___3D__D (MJIEnv env, int clsObjRef, int valArrayRef){
-    double[] values = env.getDoubleArrayObject(valArrayRef);
-    return getDoubleFromList( env, values);
+      return getNextChoice(ss, "verifyDoubleSet([D)", DoubleChoiceFromSet.class,Double.class);
+    }
   }
 
-  
-  public static float getFloatFromList (MJIEnv env, float[] values){
-    ThreadInfo ti = env.getThreadInfo();
-    SystemState ss = env.getSystemState();
-
-    if (!ti.isFirstStepInsn()) { // first time around
-      ChoiceGenerator<Float> cg = new FloatChoiceFromList("verifyFloatSet([F)", values);
-      return registerChoiceGenerator(env,ss,ti,cg, 0.0f);
-
-    } else {
-      return getNextChoice(ss, "verifyFloatList([F)", FloatChoiceFromList.class, Float.class);
-    }    
-  }
-  
-  public static float getFloatFromList___3F__F (MJIEnv env, int clsObjRef, int valArrayRef){
-    float[] values = env.getFloatArrayObject(valArrayRef);
-    return getFloatFromList( env, values);
-  }
 
 
   public static void print__Ljava_lang_String_2I__V (MJIEnv env, int clsRef, int sRef, int val){
@@ -480,73 +359,25 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
   public static void println____V (MJIEnv env, int clsRef){
     System.out.println();
   }
-  
-  //--- various attribute test methods
-  
-  private static int getAttribute (MJIEnv env, Object a){
-    if (a != null) {
-      if (a instanceof Integer) {
-        return ((Integer) a).intValue();
-      } else {
-        env.throwException("java.lang.RuntimeException", "element attribute not an Integer: " + a);
-      }
-    }
 
-    return 0;
-  }
-  
-  private static int getAttributeList (MJIEnv env, Object a){
-    if (a != null) {
-      int l = ObjectList.size(a);
-      int[] attrs = new int[l];
-      int i = 0;
-      for (Integer v : ObjectList.typedIterator(a, Integer.class)) {
-        attrs[i++] = v;
-      }
-      if (i != l) {
-        env.throwException("java.lang.RuntimeException", "found non-Integer attributes");
-        return 0;
-      }
-
-      return env.newIntArray(attrs);
-      
-    } else {
-      return MJIEnv.NULL;
-    }
-  }
-  
   public static void setObjectAttribute__Ljava_lang_Object_2I__V (MJIEnv env, int clsRef, int oRef, int attr){
     if (oRef != MJIEnv.NULL){
       ElementInfo ei = env.getElementInfo(oRef);
-      ei.setObjectAttr(Integer.valueOf(attr));
+      ei.setObjectAttr(attr);
     }
   }
-  
+
   public static int getObjectAttribute__Ljava_lang_Object_2__I (MJIEnv env, int clsRef, int oRef){
     if (oRef != MJIEnv.NULL){
       ElementInfo ei = env.getElementInfo(oRef);
-      return getAttribute( env, ei.getObjectAttr());
+      Integer a = ei.getObjectAttr(Integer.class);
+      if (a != null){
+        return a.intValue();
+      }
     }
 
     return 0;
   }
-  
-  public static void addObjectAttribute__Ljava_lang_Object_2I__V (MJIEnv env, int clsRef, int oRef, int attr){
-    if (oRef != MJIEnv.NULL){
-      ElementInfo ei = env.getElementInfo(oRef);
-      ei.addObjectAttr(Integer.valueOf(attr));
-    }
-  }
-  
-  public static int getObjectAttributes__Ljava_lang_Object_2___3I (MJIEnv env, int clsRef, int oRef){
-    if (oRef != MJIEnv.NULL){
-      ElementInfo ei = env.getElementInfo(oRef);
-      return getAttributeList( env, ei.getObjectAttr());
-    }
-
-    return MJIEnv.NULL;
-  }
-  
 
   public static void setFieldAttribute__Ljava_lang_Object_2Ljava_lang_String_2I__V (MJIEnv env, int clsRef,
                                                                                     int oRef, int fnRef, int attr){
@@ -557,7 +388,7 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
         FieldInfo fi = ei.getFieldInfo(fname);
 
         if (fi != null) {
-          ei.setFieldAttr(fi, Integer.valueOf(attr));
+          ei.setFieldAttr(fi, new Integer(attr));
         } else {
           env.throwException("java.lang.NoSuchFieldException",
                   ei.getClassInfo().getName() + '.' + fname);
@@ -567,8 +398,7 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
       }
     }
   }
-  
-  
+
   public static int getFieldAttribute__Ljava_lang_Object_2Ljava_lang_String_2__I (MJIEnv env, int clsRef,
                                                                                     int oRef, int fnRef){
     if (oRef != MJIEnv.NULL){
@@ -578,7 +408,10 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
         FieldInfo fi = ei.getFieldInfo(fname);
 
         if (fi != null) {
-          return getAttribute( env, ei.getFieldAttr(fi));
+          Integer a = ei.getFieldAttr(Integer.class, fi);
+          if (a != null){
+            return a.intValue();
+          }
         } else {
           env.throwException("java.lang.NoSuchFieldException",
                   ei.toString() + '.' + fname);
@@ -590,115 +423,47 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
 
     return 0;
   }
-  
-  public static void addFieldAttribute__Ljava_lang_Object_2Ljava_lang_String_2I__V (MJIEnv env, int clsRef,
-                                                                                    int oRef, int fnRef, int attr){
-    if (oRef != MJIEnv.NULL){
-      ElementInfo ei = env.getElementInfo(oRef);
-      if (ei != null){
-        String fname = env.getStringObject(fnRef);
-        FieldInfo fi = ei.getFieldInfo(fname);
 
-        if (fi != null) {
-          ei.addFieldAttr(fi, Integer.valueOf(attr));
-        } else {
-          env.throwException("java.lang.NoSuchFieldException",
-                  ei.getClassInfo().getName() + '.' + fname);
-        }
-      } else {
-        env.throwException("java.lang.RuntimeException", "illegal reference value: " + oRef);
-      }
-    }
-  }
-
-
-  public static int getFieldAttributes__Ljava_lang_Object_2Ljava_lang_String_2___3I (MJIEnv env, int clsRef,
-                                                                                    int oRef, int fnRef){
-    if (oRef != MJIEnv.NULL){
-      ElementInfo ei = env.getElementInfo(oRef);
-      if (ei != null){
-        String fname = env.getStringObject(fnRef);
-        FieldInfo fi = ei.getFieldInfo(fname);
-
-        if (fi != null) {
-          return getAttributeList( env, ei.getFieldAttr(fi));          
-        } else {
-          env.throwException("java.lang.NoSuchFieldException",
-                  ei.toString() + '.' + fname);
-        }
-      } else {
-        env.throwException("java.lang.RuntimeException", "illegal reference value: " + oRef);
-      }
-    }
-
-    return MJIEnv.NULL;
-  }
-
-  
-  public static void setLocalAttribute__Ljava_lang_String_2I__V (MJIEnv env, int clsRef, int varRef, int attr) {
-    String slotName = env.getStringObject(varRef);
-    StackFrame frame = env.getCallerStackFrame(); // we are executing in a NativeStackFrame
+  public static void setLocalAttribute__Ljava_lang_String_2I__V (MJIEnv env, int clsRef, int snRef, int attr) {
+    String slotName = env.getStringObject(snRef);
+    ThreadInfo ti = env.getThreadInfo();
+    StackFrame frame = ti.getTopFrame();
 
     if (!frame.getMethodInfo().isStatic() &&  slotName.equals("this")) {
-      frame.setLocalAttr(0, Integer.valueOf(attr)); // only for instance methods of course
+      frame.setLocalAttr(0, new Integer(attr)); // only for instance methods of course
 
     } else {
-      int slotIdx = frame.getLocalVariableSlotIndex(slotName);
+      int slotIdx = frame.getLocalVariableOffset(slotName);
       if (slotIdx >= 0) {
-        frame.setLocalAttr(slotIdx, Integer.valueOf(attr));
+        frame.setLocalAttr(slotIdx, new Integer(attr));
       } else {
         env.throwException("java.lang.RuntimeException", "local variable not found: " + slotName);
       }
     }
   }
 
-  public static int getLocalAttribute__Ljava_lang_String_2__I (MJIEnv env, int clsRef, int varRef) {
-    String slotName = env.getStringObject(varRef);
+  public static int getLocalAttribute__Ljava_lang_String_2__I (MJIEnv env, int clsRef, int snRef) {
+    String slotName = env.getStringObject(snRef);
     ThreadInfo ti = env.getThreadInfo();
-    StackFrame frame = env.getCallerStackFrame();
+    StackFrame frame = ti.getTopFrame();
 
-    int slotIdx = frame.getLocalVariableSlotIndex(slotName);
+    int slotIdx = frame.getLocalVariableOffset(slotName);
     if (slotIdx >= 0) {
-      return getAttribute( env, frame.getLocalAttr(slotIdx));
+      Object val = frame.getLocalAttr(slotIdx);
+      if (val instanceof Integer) {
+        return (Integer)val;
+      } else {
+        env.throwException("java.lang.RuntimeException", "attribute for local var: "
+                           + slotName + " not an int: " + val);
+        return 0;
+      }
     } else {
       env.throwException("java.lang.RuntimeException", "local variable not found: " + slotName);
       return 0;
     }
   }
 
-  public static void addLocalAttribute__Ljava_lang_String_2I__V (MJIEnv env, int clsRef, int varRef, int attr) {
-    String slotName = env.getStringObject(varRef);
-    StackFrame frame = env.getCallerStackFrame(); // we are executing in a NativeStackFrame
 
-    if (!frame.getMethodInfo().isStatic() &&  slotName.equals("this")) {
-      frame.addLocalAttr(0, Integer.valueOf(attr)); // only for instance methods of course
-
-    } else {
-      int slotIdx = frame.getLocalVariableSlotIndex(slotName);
-      if (slotIdx >= 0) {
-        frame.addLocalAttr(slotIdx, Integer.valueOf(attr));
-      } else {
-        env.throwException("java.lang.RuntimeException", "local variable not found: " + slotName);
-      }
-    }
-  }
-  
-  public static int getLocalAttributes__Ljava_lang_String_2___3I (MJIEnv env, int clsRef, int varRef) {
-    String slotName = env.getStringObject(varRef);
-    ThreadInfo ti = env.getThreadInfo();
-    StackFrame frame = env.getCallerStackFrame();
-
-    int slotIdx = frame.getLocalVariableSlotIndex(slotName);
-    if (slotIdx >= 0) {
-      return getAttributeList( env, frame.getLocalAttr(slotIdx));
-    } else {
-      env.throwException("java.lang.RuntimeException", "local variable not found: " + slotName);
-    }
-    
-    return MJIEnv.NULL;
-  }
-  
-  
   public static void setElementAttribute__Ljava_lang_Object_2II__V (MJIEnv env, int clsRef,
                                                                     int oRef, int idx, int attr){
     if (oRef != MJIEnv.NULL){
@@ -707,7 +472,7 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
       if (ei != null){
         if (ei.isArray()) {
           if (idx < ei.arrayLength()) {
-            ei.setElementAttr(idx, Integer.valueOf(attr));
+            ei.setElementAttr(idx, new Integer(attr));
           } else {
             env.throwException("java.lang.ArrayIndexOutOfBoundsException",
                     Integer.toString(idx));
@@ -730,7 +495,10 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
       if (ei != null) {
         if (ei.isArray()) {
           if (idx < ei.arrayLength()) {
-            return getAttribute( env, ei.getElementAttr( idx));
+            Integer a = ei.getElementAttr(Integer.class, idx);
+            if (a != null){
+              return a.intValue();
+            }
           } else {
             env.throwException("java.lang.ArrayIndexOutOfBoundsException",
                     Integer.toString(idx));
@@ -747,59 +515,11 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
     return 0;
   }
 
-  
-  public static void addElementAttribute__Ljava_lang_Object_2II__V (MJIEnv env, int clsRef,
-                                                                    int oRef, int idx, int attr){
-    if (oRef != MJIEnv.NULL){
-      ElementInfo ei = env.getElementInfo(oRef);
 
-      if (ei != null){
-        if (ei.isArray()) {
-          if (idx < ei.arrayLength()) {
-            ei.addElementAttr(idx, Integer.valueOf(attr));
-          } else {
-            env.throwException("java.lang.ArrayIndexOutOfBoundsException",
-                    Integer.toString(idx));
-          }
-        } else {
-          env.throwException("java.lang.RuntimeException",
-                  "not an array: " + ei);
-        }
-      } else {
-        env.throwException("java.lang.RuntimeException", "illegal reference value: " + oRef);
-      }
-    }
-  }
-
-  public static int getElementAttributes__Ljava_lang_Object_2I___3I (MJIEnv env, int clsRef,
-                                                                        int oRef, int idx){
-    if (oRef != MJIEnv.NULL){
-      ElementInfo ei = env.getElementInfo(oRef);
-      if (ei != null) {
-        if (ei.isArray()) {
-          if (idx < ei.arrayLength()) {
-            return getAttributeList( env, ei.getElementAttr( idx));
-          } else {
-            env.throwException("java.lang.ArrayIndexOutOfBoundsException",
-                    Integer.toString(idx));
-          }
-        } else {
-          env.throwException("java.lang.RuntimeException",
-                  "not an array: " + ei);
-        }
-      } else {
-        env.throwException("java.lang.RuntimeException", "illegal reference value: " + oRef);
-      }
-    }
-
-    return MJIEnv.NULL;
-  }
-
-  
   /**
    *  deprecated, use getBoolean()
    */
-  public static boolean randomBool (MJIEnv env, int clsObjRef) {
+  public static final boolean randomBool (MJIEnv env, int clsObjRef) {
     //SystemState ss = env.getSystemState();
     //return (ss.random(2) != 0);
 
@@ -811,7 +531,7 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
   /**
    * deprecated, use getInt
    */
-  public static int random__I__I (MJIEnv env, int clsObjRef, int x) {
+  public static final int random__I__I (MJIEnv env, int clsObjRef, int x) {
    return getInt__II__I( env, clsObjRef, 0, x);
   }
 
@@ -819,6 +539,27 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
     env.getSystemState().setBoring(b);
   }
 
+  protected static int[] arrayOfObjectsOfType (DynamicArea da, String type) {
+    int[] map = new int[0];
+    int   map_size = 0;
+
+    for (int i = 0; i < da.getLength(); i++) {
+      if (da.get(i) != null) {
+        if ((Types.getTypeName(da.get(i).getType())).equals(type)) {
+          if (map_size >= map.length) {
+            int[] n = new int[map_size + 1];
+            System.arraycopy(map, 0, n, 0, map.length);
+            map = n;
+          }
+
+          map[map_size] = i;
+          map_size++;
+        }
+      }
+    }
+
+    return map;
+  }
 
   public static boolean isRunningInJPF____Z(MJIEnv env, int clsObjRef) {
     return true;
@@ -910,151 +651,4 @@ public class JPF_gov_nasa_jpf_jvm_Verify {
 
     System.out.println("~~~~~~~~~~~~~~~~~~~~~~~ end path output");
   }
-
-
-  // the JSON object initialization
-  public static int createFromJSON__Ljava_lang_Class_2Ljava_lang_String_2__Ljava_lang_Object_2(
-          MJIEnv env, int clsObjRef, int newObjClsRef, int jsonStringRef) {
-    ThreadInfo ti = env.getThreadInfo();
-    SystemState ss = env.getSystemState();
-    
-    String jsonString = env.getStringObject(jsonStringRef);    
-    JSONLexer lexer = new JSONLexer(jsonString);
-    JSONParser parser = new JSONParser(lexer);
-    JSONObject jsonObject = parser.parse();
-        
-    if (jsonObject != null) {
-      ClassInfo ci = env.getReferredClassInfo( newObjClsRef);
-      
-      // check if we need any class init (and hence reexecution) before creating any CGs
-      if (jsonObject.requiresClinitExecution(ci,ti)){
-        env.repeatInvocation();
-        return MJIEnv.NULL;
-      }
-
-      if (!ti.isFirstStepInsn()) {
-        // Top half - get and register CGs we need to set to fill object from JSON
-        List<ChoiceGenerator<?>> cgList = CGCall.createCGList(jsonObject);
-        if (cgList.isEmpty()){
-          return jsonObject.fillObject(env, ci, null, "");
-          
-        } else {
-          for (ChoiceGenerator<?> cg : cgList) {
-            ss.setNextChoiceGenerator(cg);
-          }
-
-          env.repeatInvocation();
-          return MJIEnv.NULL;
-        }
-        
-      } else {
-        // Bottom half - fill object with JSON and current values of CGs
-        ChoiceGenerator<?>[] cgs = ss.getChoiceGenerators();
-
-        return jsonObject.fillObject(env, ci, cgs, "");
-      }
-
-    } else {
-      return MJIEnv.NULL;
-    }
-  }
-  
-  public static int readObjectFromFile__Ljava_lang_Class_2Ljava_lang_String_2__Ljava_lang_Object_2(
-          MJIEnv env, int clsObjRef, int newObjClsRef, int fileNameRef) {
-    int typeNameRef = env.getReferenceField(newObjClsRef, "name");
-    String typeName = env.getStringObject(typeNameRef);
-    String fileName = env.getStringObject(fileNameRef);
-
-    try {
-
-      FileInputStream fis = new FileInputStream(fileName);
-      ObjectInputStream ois = new ObjectInputStream(fis);
-      Object javaObject = ois.readObject();
-      String readObjectTypeName = javaObject.getClass().getCanonicalName();
-      
-      int readObjRef = ObjectConverter.JPFObjectFromJavaObject(env, javaObject);
-
-      return readObjRef;
-    } catch (Exception ex) {
-      throw new JPFException(ex);
-    }
-  }
-  
-  //--- those need to be kept in sync with the model side
-  public static final int SEVERE = 1;
-  public static final int WARNING = 2;
-  public static final int INFO = 3;
-  public static final int FINE = 4;
-  public static final int FINER = 5;
-  public static final int FINEST = 6;
-
-  
-  private static void log (JPFLogger logger, int logLevel, String msg){
-    switch (logLevel){
-    case SEVERE:
-      logger.severe( msg);
-      break;
-    case WARNING:
-      logger.warning( msg);
-      break;
-    case INFO:
-      logger.info( msg);
-      break;
-    case FINE:
-      logger.fine( msg);
-      break;
-    case FINER:
-      logger.finer( msg);
-      break;
-    case FINEST:
-      logger.finest( msg);
-      break;
-    default:
-      throw new JPFException("unknown log level " + logLevel + " for logger " + logger.getName());
-    }    
-  }
-  
-  public static void log__Ljava_lang_String_2ILjava_lang_String_2__V (MJIEnv env, int clsObjRef,
-      int loggerIdRef, int logLevel, int msgRef){
-    String loggerId = env.getStringObject(loggerIdRef);
-    String msg = env.getStringObject(msgRef);
-    JPFLogger logger = JPF.getLogger(loggerId);
-    
-    log( logger, logLevel, msg);
-  }
-
-  public static void log__Ljava_lang_String_2ILjava_lang_String_2Ljava_lang_String_2__V (MJIEnv env, int clsObjRef,
-      int loggerIdRef, int logLevel, int arg1Ref, int arg2Ref){
-    String loggerId = env.getStringObject(loggerIdRef);
-    String msg = env.getStringObject(arg1Ref) + env.getStringObject(arg2Ref);
-    JPFLogger logger = JPF.getLogger(loggerId);
-    
-    log( logger, logLevel, msg);
-  }
-
-  
-  public static void log__Ljava_lang_String_2ILjava_lang_String_2_3Ljava_lang_Object_2__V (MJIEnv env, int clsObjRef,
-      int loggerIdRef, int logLevel, int fmtRef, int argsRef){
-    String loggerId = env.getStringObject(loggerIdRef);
-    String fmt = env.getStringObject(fmtRef);
-    JPFLogger logger = JPF.getLogger(loggerId);
-
-    int[] argRefs = env.getReferenceArrayObject( argsRef);
-    Object[] args = new Object[argRefs.length];
-    for (int i=0; i<args.length; i++){
-      ElementInfo eiArg = env.getElementInfo(argRefs[i]);
-      if (eiArg.isStringObject()){
-        args[i] = env.getStringObject(argRefs[i]);
-      } else if (eiArg.isBoxObject()){
-        args[i] = eiArg.asBoxObject(); 
-      } else {
-        args[i] = eiArg.toString();
-      }
-    }
-    
-    String msg = String.format(fmt, args);
-    
-    log( logger, logLevel, msg);
-  }
-
 }
